# Atom

./: .gitignore  .gitmodules  BUILD_SYSTEM.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  XMAKE_BUILD.md  build-config.yaml  build.bat  build.py  build.sh  pyproject.toml  validate-build.py  vcpkg.json  xmake.lua
atom/: CMakeLists.txt  macro.hpp  xmake.lua
atom/algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  annealing.hpp  base.cpp  base.hpp  bignumber.cpp  bignumber.hpp  blowfish.cpp  blowfish.hpp  convolve.cpp  convolve.hpp  error_calibration.hpp  flood.cpp  flood.hpp  fnmatch.cpp  fnmatch.hpp  fraction.cpp  fraction.hpp  hash.hpp  huffman.cpp  huffman.hpp  math.cpp  math.hpp  matrix.hpp  matrix_compress.cpp  matrix_compress.hpp  md5.cpp  md5.hpp  mhash.cpp  mhash.hpp  pathfinding.cpp  pathfinding.hpp  perlin.hpp  rust_numeric.hpp  sha1.cpp  sha1.hpp  snowflake.hpp  tea.cpp  tea.hpp  (+2 more)
atom/async/: CMakeLists.txt  async.hpp  async_executor.cpp  async_executor.hpp  daemon.cpp  daemon.hpp  eventstack.hpp  future.hpp  generator.hpp  limiter.cpp  limiter.hpp  lock.cpp  lock.hpp  lodash.hpp  message_bus.hpp  message_queue.hpp  packaged_task.hpp  parallel.hpp  pool.hpp  promise.cpp  promise.hpp  queue.hpp  safetype.hpp  slot.hpp  thread_wrapper.hpp  threadlocal.hpp  timer.cpp  timer.hpp  trigger.hpp  xmake.lua
atom/components/: CMakeLists.txt  component.cpp  component.hpp  component.template  config.hpp  dispatch.cpp  dispatch.hpp  module_macro.hpp  registry.cpp  registry.hpp  types.hpp  var.cpp  var.hpp  xmake.lua
atom/connection/: CMakeLists.txt  async_fifoclient.cpp  async_fifoclient.hpp  async_sockethub.cpp  async_sockethub.hpp  async_tcpclient.cpp  async_tcpclient.hpp  async_udpclient.cpp  async_udpclient.hpp  async_udpserver.cpp  async_udpserver.hpp  fifoclient.cpp  fifoclient.hpp  fifoserver.cpp  fifoserver.hpp  sockethub.cpp  sockethub.hpp  sshserver.cpp  sshserver.hpp  tcpclient.cpp  tcpclient.hpp  ttybase.cpp  ttybase.hpp  udpclient.cpp  udpclient.hpp  udpserver.cpp  udpserver.hpp  xmake.lua
atom/containers/: boost_containers.hpp  graph.hpp  high_performance.hpp  intrusive.hpp  lockfree.hpp
atom/error/: CMakeLists.txt  exception.cpp  exception.hpp  stacktrace.cpp  stacktrace.hpp  xmake.lua
atom/function/: CMakeLists.txt  Untitled-1.cpp  abi.hpp  any.hpp  bind_first.hpp  constructor.hpp  decorate.hpp  ffi.hpp  field_count.hpp  func_traits.hpp  global_ptr.cpp  global_ptr.hpp  invoke.hpp  member.hpp  proxy.hpp  proxy_params.hpp  stepper.hpp  type_caster.hpp  type_info.hpp  vany.hpp
atom/image/: exif.cpp  exif.hpp  fits_data.cpp  fits_data.hpp  fits_file.cpp  fits_file.hpp  fits_header.cpp  fits_header.hpp  fits_utils.cpp  fits_utils.hpp  hdu.cpp  hdu.hpp  image_blob.hpp  xmake.lua
atom/io/: CMakeLists.txt  async_compress.cpp  async_compress.hpp  async_glob.cpp  async_glob.hpp  async_io.cpp  async_io.hpp  compress.cpp  compress.hpp  file_info.cpp  file_info.hpp  file_permission.cpp  file_permission.hpp  glob.hpp  io.cpp  io.hpp  pushd.cpp  pushd.hpp  test_async_compress.cpp  test_async_io.cpp  test_compress.cpp  test_file_permission.cpp  test_pushd.cpp  xmake.lua
atom/log/: CMakeLists.txt  async_logger.cpp  async_logger.hpp  atomlog.cpp  atomlog.hpp  log_manager.cpp  log_manager.hpp  logger.cpp  logger.hpp  loguru.cpp  loguru.hpp  mmap_logger.cpp  mmap_logger.hpp  xmake.lua
atom/memory/: CMakeLists.txt  memory.hpp  memory_pool.hpp  object.hpp  ring.hpp  shared.hpp  short_alloc.hpp  tracker.hpp  utils.hpp  xmake.lua
atom/meta/: CMakeLists.txt  Untitled-1.cpp  abi.hpp  any.cpp  any.hpp  anymeta.hpp  bind_first.hpp  concept.hpp  constructor.hpp  container_traits.hpp  conversion.hpp  decorate.hpp  enum.hpp  facade.hpp  facade_any.hpp  facade_proxy.hpp  ffi.hpp  field_count.hpp  func_traits.hpp  global_ptr.cpp  global_ptr.hpp  god.hpp  invoke.hpp  member.hpp  overload.hpp  property.hpp  proxy.hpp  proxy_params.hpp  raw_name.hpp  refl.hpp  refl_json.hpp  refl_yaml.hpp  signature.hpp  stepper.hpp  template_traits.hpp  type_caster.hpp  type_info.hpp  vany.hpp  xmake.lua
atom/script/: build_system.cpp  main.cpp
atom/search/: CMakeLists.txt  cache.hpp  lru.hpp  mysql.cpp  mysql.hpp  search.cpp  search.hpp  sqlite.cpp  sqlite.hpp  ttl.hpp  xmake.lua
atom/secret/: CMakeLists.txt  common.hpp  encryption.cpp  encryption.hpp  password.cpp  password.hpp  password_entry.hpp  password_manager.cpp  password_manager.hpp  result.hpp  storage.cpp  storage.hpp  test_password.hpp  xmake.lua
atom/serial/: CMakeLists.txt  bluetooth_serial.cpp  bluetooth_serial.hpp  bluetooth_serial_mac.hpp  bluetooth_serial_mac.mm  bluetooth_serial_unix.hpp  bluetooth_serial_win.hpp  scanner.cpp  scanner.hpp  serial_port.cpp  serial_port.hpp  serial_port_unix.hpp  serial_port_win.hpp  usb.cpp  usb.hpp  xmake.lua
atom/sysinfo/: CMakeLists.txt  battery.cpp  battery.hpp  bios.cpp  bios.hpp  cpu.cpp  cpu.hpp  disk.cpp  disk.hpp  gpu.cpp  gpu.hpp  locale.cpp  locale.hpp  memory.cpp  memory.hpp  os.cpp  os.hpp  sn.cpp  sn.hpp  sysinfo_printer.cpp  sysinfo_printer.hpp  virtual.cpp  virtual.hpp  wifi.cpp  wifi.hpp  wm.cpp  wm.hpp  xmake.lua
atom/system/: CMakeLists.txt  MIGRATION_GUIDE.md  clipboard.cpp  clipboard.hpp  clipboard.ipp  clipboard_error.hpp  clipboard_linux.cpp  clipboard_macos.cpp  clipboard_windows.cpp  command.cpp  command.hpp  crash.cpp  crash.hpp  crash_quotes.cpp  crash_quotes.hpp  crontab.cpp  crontab.hpp  device.cpp  device.hpp  env.cpp  env.hpp  gpio.cpp  gpio.hpp  lregistry.cpp  lregistry.hpp  network_manager.cpp  network_manager.hpp  nodebugger.cpp  nodebugger.hpp  pidwatcher.cpp  pidwatcher.hpp  priority.cpp  priority.hpp  process.cpp  process.hpp  process_info.hpp  process_manager.cpp  process_manager.hpp  signal.cpp  signal.hpp  (+22 more)
atom/tests/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  charts.py  fuzz.cpp  fuzz.hpp  perf.cpp  perf.hpp  test.hpp  test_charts.py  test_cli.hpp  test_registry.hpp  (+3 more)
example/: CMakeLists.txt  xmake.lua
python/: CMakeLists.txt  pybind11_json.hpp
tests/: CMakeLists.txt  clipboard_modern_tests.cpp  xmake.lua
(+984 files in other folders)
